--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyA-FiYlW97GHopwZKQEJGz6EQ-XNmfk9JY
-REACT_APP_API_URL=https://managetime-backend-48f256c2dfe5.herokuapp.com
+REACT_APP_API_URL=http://localhost:5000
